javascript visibility struggle

--- a/index.html
+++ b/index.html
@@ -33,17 +33,32 @@
       to help us improve our offering!</p>
 
     <div class="rate">
-      <span class="score">1</span>
-      <span class="score">2</span>
-      <span class="score">3</span>
-      <span class="score">4</span>
-      <span class="score">5</span>
+      <span class="score1">1</span>
+      <span class="score2">2</span>
+      <span class="score3">3</span>
+      <span class="score4">4</span>
+      <span class="score5">5</span>
     </div>
 
-    <a id="btn" href="./index1.html">SUBMIT</a>
+    <a id="btn" href="">SUBMIT</a>
 
   </div>
   <!-- Rating state end -->
+
+  <!-- Thank you state start -->
+
+  <div class="thankUstate">
+
+    <img src="./images/illustration-thank-you.svg" alt="thankU">
+
+    <p class="selection">You selected <span id="yourScore"></span>out of 5</p>
+
+    <h1>Thank you!</h1>
+
+    <p>We appreciate you taking the time to give a rating. If you ever need more support,
+        don’t hesitate to get in touch!</p>
+</div>
+<!-- Thank you state end -->
 
   <script src="./index.js"></script>
 </body>
