htmlelement.hidden test struggle

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 
   <!-- Rating state start -->
-  <div class="ratingState">
+  <div id="ratingState">
 
     <div class="star">
       <img src="./images/icon-star.svg" alt="start">
@@ -40,14 +40,14 @@
       <span class="score5">5</span>
     </div>
 
-    <a id="btn" href="">SUBMIT</a>
+    <button id="btn" href="">SUBMIT</button>
 
   </div>
   <!-- Rating state end -->
 
   <!-- Thank you state start -->
 
-  <div class="thankUstate">
+  <div id="thankUstate" hidden>
 
     <img src="./images/illustration-thank-you.svg" alt="thankU">
 
